# yafux

./: .gitignore  CMakeLists.txt  README.md  _syscalls.c  config.cmake  config.h.in  stm32_flash.ld
.github/workflows/: main.yml
apps/: CMakeLists.txt
apps/led/: CMakeLists.txt  main.c
apps/logging/: CMakeLists.txt  main.c
apps/nes/: CMakeLists.txt  lcd.c  main.c  mapper.c  nes.c  psg.h  rom.c  sdl.c
apps/nes/pt-1.4/: pt.h
apps/sdl/: CMakeLists.txt  sdl.c
cmake/: extensions.cmake
drivers/: CMakeLists.txt
drivers/lcd/: CMakeLists.txt  hx8357d.c  lcd.h
drivers/mipi/: CMakeLists.txt  mipi.c  mipi.h
gprof/: CMakeLists.txt  gmon.c  profil.c  profil.h
logging/: CMakeLists.txt  led_log.c  logging.c  logging.h  logging_led.c  logging_semihosting.c  logging_usart.c  semihosting_log.c  usart_log.c
nes/: CMakeLists.txt  cpu.c  cpu.h  mapper.c  mapper.h  nes.c  nes.h  ppu.c  ppu.h  psg.c  rom.c  rom.h
script/: arm-none-eabi-toolchain.cmake  flash.sh  qemu.sh
stm32lib/: CMakeLists.txt
