project(stm32)
cmake_minimum_required(VERSION 3.9)
# set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O3")
set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -g -pg")

include(config.cmake)
include(cmake/extensions.cmake)
include_directories(${CMAKE_BINARY_DIR})
configure_file(config.h.in	${CMAKE_BINARY_DIR}/config.h)

add_subdirectory(nes)
add_subdirectory(apps)
add_subdirectory(drivers)
add_subdirectory(stm32lib)
add_subdirectory(logging)
